# ai-game-sandbox

./: .gitignore  CACHING_FEATURE.md  CACHING_IMPLEMENTATION_SUMMARY.md  COLLECTIBLES_IMPLEMENTATION.md  COLLECTIBLE_DESCRIPTIONS.md  COLLECTIBLE_SEGMENTATION_FIX.md  COLLECTIBLE_SIZING.md  COMPONENT_CACHING_SYSTEM.md  FEATURES.md  QUICKSTART.md  README.md  STATUS_BAR_SYSTEM.md  STATUS_EFFECTS_UPDATE.md  UPDATE_SUMMARY.md  index.html  package.json  pyproject.toml
backend/: .env.example  .gitignore  BEFORE_AFTER_COMPARISON.txt  COLLECTIBLE_FLOW.txt  README.md  analyze_walkable_platforms.py  cache_manager.py  component_cache_manager.py  debug_sprite_extraction.py  example.py  game_cache_manager.py  game_generator.py  image_cache.json  image_cache_manager.py  image_critic.py  image_generation_README.md  main.py  pyproject.toml  requirements.txt  test_collectible_segmentation.py  test_component_cache.py  test_sprite_analyzer.py  visualize_sprite_extraction.py
backend/animated_sprites/: view_animations.html
backend/image_generation/: .env.example  __init__.py  config.py  utils.py
backend/playable_game/: game.html  run_game.py  scene_config.json
backend/scene_builder/: __init__.py  background_analyzer.py  scene_generator.py  web_exporter.py
backend/sprite_processing/: README.md  __init__.py  background_remover.py  cli.py  phaser_config.py  sprite_sheet_analyzer.py  sprite_sheet_builder.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AssetPromptsDisplay.tsx  CachedPrompts.tsx  ErrorMessage.tsx  Header.tsx  LoadingSpinner.tsx  PromptInput.tsx
frontend/src/context/: AssetContext.tsx
frontend/src/pages/: GameSandbox.tsx  GenerateAssets.tsx  Home.tsx
src/: App.tsx
src/image_generation/: cli.py  config.py  generator.py  requirements.txt
