[project]
name = "ai-game-sandbox"
version = "0.1.0"
description = "AI Video Game Asset Generator with FAL AI integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fal-client>=0.4.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.scripts]
generate-image = "image_generation.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["image_generation"]

[tool.hatch.build]
include = [
    "image_generation/**/*.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
